# agentic-ai

./: 1_simple-openai.ipynb  README.md  pyproject.toml  utilities.py
crew-ai/coder/: output.txt  pyproject.toml
crew-ai/coder/output/: code_and_output.txt
crew-ai/debate/: pyproject.toml
crew-ai/debate/output/: decide.md  oppose.md  propose.md
crew-ai/engineering_team/: pyproject.toml
crew-ai/engineering_team/output/: accounts.py  accounts_design.md  (+2 more)
crew-ai/financial_researcher/: pyproject.toml
crew-ai/stock_picker/: pyproject.toml
lang-graph/: README.md  app.py  exercises.md  lang-graph-intro.ipynb  lang-graph-playwright.ipynb  lang-graph-tools.ipynb  memory.db-shm  memory.db-wal  sidekick.py  sidekick_tool.py
mcp-server/: mcp-intro.ipynb
ms-autogen/: agent-chat-tools.ipynb  agent-core-distributed.ipynb  agent-core-rock-paper-scissor.ipynb  agent-core.ipynb  intro-.ipynb  tickets.db
ms-autogen/project/: agent1.py  agent10.py  agent11.py  agent12.py  agent13.py  agent14.py  agent15.py  agent16.py  agent17.py  agent18.py  agent19.py  agent2.py  agent20.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  agent8.py  agent9.py  messages.py  world.py
ms-autogen/sandbox/: flights.md
notebooks/: career-chatbot-tools.ipynb  career-chatbot.ipynb  claude-test.ipynb  ollama-call.ipynb  todo-tools.ipynb  workflow-1.ipynb
notebooks/files/: profile.md  summary.txt
open-ai-agents/: 1_agent-creation.ipynb  2_agent-handoffs-gaudrails.ipynb  2_agent-tools.ipynb  2_agent-workflow-handoffs.ipynb  2_agent-workflow.ipynb  2_deep-research-agent.ipynb  README.md  health_wellness_report.md
sandbox/: South_Indian_Paleo_LCHF_Recipes.txt  healthy_routine_schedule.md  south_indian_paleo_recipes.md
(+56 files in other folders)
