[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.76.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "gradio>=6.3.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "lxml>=6.0.2",
    "openai>=2.15.0",
    "openai-agents>=0.6.9",
    "playwright>=1.58.0",
    "pypdf>=6.6.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sendgrid>=6.12.5",
]
